Implement programmatic redirect to the latest version of Metamath lamp to preserve query string.

--- a/lamp/latest/index.html
+++ b/lamp/latest/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <head>
-    <title>Redirecting to https://expln.github.io/lamp/v9/index.html</title>
+    <title>Redirecting to the latest version of Metamath lamp</title>
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta http-equiv="refresh" content="0; URL=https://expln.github.io/lamp/v9/index.html">
 </head>
 <body>
-    <link rel="canonical" href="https://expln.github.io/lamp/v9/index.html">
 </body>
+<script>
+    window.location.href = `https://expln.github.io/lamp/v9/index.html` + (window.location.search??"")
+</script>
