--- a/lamp/latest/index.html
+++ b/lamp/latest/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Redirecting to the latest version of Metamath lamp</title>
+    <title>Redirecting to the latest version of Metamath-lamp</title>
     <meta charset="utf-8">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
@@ -9,5 +9,5 @@
 <body>
 </body>
 <script>
-    window.location.href = `https://expln.github.io/lamp/v12/index.html` + (window.location.search??"")
+    window.location.href = `https://expln.github.io/lamp/v13/index.html` + (window.location.search??"")
 </script>
